<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context=".InfoJuegoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acercaJuego"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="24sp"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/control_de_juego"
        android:layout_gravity="center"
        android:contentDescription="@string/imgUsuario"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descJuego"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descNivelF"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descNivelM"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descNivelD"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>


</LinearLayout>