<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".IniciarJuegoActivity">

    <TextView
        android:id="@+id/txvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adivina_el_numero"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txvTitlePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/txvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/jugador"
        android:textSize="18sp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/txvJugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/txvTitle"
        app:layout_constraintStart_toEndOf="@id/txvTitlePlayer"
        tools:text="Player1"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/txvTitleNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txvJugador"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/nivel_seleccionado"
        android:textSize="18sp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/txvNivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txvJugador"
        app:layout_constraintStart_toEndOf="@id/txvTitleNivel"
        tools:text="Facil"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/txvIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txvNivel"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/intentos"
        android:textSize="18sp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/txvContIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/txvNivel"
        app:layout_constraintStart_toEndOf="@id/txvIntentos"
        tools:text="10"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNumero"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:hint="@string/numero"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txvIntentos">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNumeroAdivinar"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/btnAdivinar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilNumero"
        app:cornerRadius="100dp"
        android:text="@string/adivinar"/>

</androidx.constraintlayout.widget.ConstraintLayout>