<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp">

<!--    <TextView
        android:id="@+id/txvTi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/puntajes_m_s_altos"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"/>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imgUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imgUsuario" />

        <TextView
            android:id="@+id/txvTijug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/jugador"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/imgUser"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvPuntajeJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/jugador"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txvTijug"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvTiInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/intentos"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/imgUser"
            app:layout_constraintTop_toBottomOf="@id/txvTijug" />

        <TextView
            android:id="@+id/txvPuntajeIntentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="24dp"
            android:text="@string/intentos"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txvTiInt"
            app:layout_constraintTop_toBottomOf="@id/txvPuntajeJugador" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>